--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
   "dependencies": {
     "@clack/prompts": "^0.7.0",
     "@floating-ui/dom": "^1.5.3",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@napi-rs/simple-git": "0.1.9",
     "async-mutex": "^0.4.0",
     "chalk": "^5.3.0",
